# glyph

./: .gitignore  BETA_THETA_SUMMARY.md  Cargo.toml  Dockerfile  PROJECTS.md  README.md  TODO.md  build.rs  deploy.sh  test_client.rs
docs/: FEATURES.md  INTEGRATION_CONTRACT.md  README.md  RUNE_INTEGRATION.md  architecture.md  installation.md  quickstart.md
docs/editor-configs/: README.md  cline_mcp_settings.json  neovim-glyph.lua  vscode-settings.json
docs/guides/: binary.md  server.md  tools.md  transports.md
examples/: client_example.rs  server_example.rs  test_client.rs
examples/integration_example/: Cargo.toml  README.md
examples/integration_example/src/: main.rs
integrations/ghostflow/: Cargo.toml  README.md
integrations/ghostflow/src/: lib.rs
integrations/ghostllm/: Cargo.toml  README.md
integrations/ghostllm/src/: lib.rs
integrations/jarvis/: Cargo.toml  README.md
integrations/jarvis/src/: lib.rs  main.rs
src/: client.rs  error.rs  ffi.rs  lib.rs  main.rs  protocol.rs  rune_ffi.rs  rune_tools.rs  server.rs  transport.rs
src/client/: builder.rs  connection.rs  core.rs  mod.rs  prompts.rs  resources.rs  tools.rs
src/protocol/: capabilities.rs  error.rs  jsonrpc.rs  messages.rs  mod.rs  types.rs  version.rs
src/server/: builder.rs  core.rs  handler.rs  middleware.rs  mod.rs  observability.rs  policy.rs  prompts.rs  registry.rs  resources.rs  security.rs  session.rs  tools.rs
src/transport/: http.rs  mod.rs  stdio.rs  traits.rs  websocket.rs
tests/: cli_smoke_tests.rs  ffi_tests.rs
