[package]
name = "glyph"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Ghost Kellz <noreply@ghostkellz.dev>"]
description = "Enterprise-grade Rust library and server for Model Context Protocol (MCP)"
license = "MIT"
repository = "https://github.com/ghostkellz/glyph"
homepage = "https://github.com/ghostkellz/glyph"
documentation = "https://github.com/ghostkellz/glyph/tree/main/docs"
readme = "README.md"
keywords = ["mcp", "model-context-protocol", "ai", "llm", "tools"]
categories = ["asynchronous", "web-programming", "api-bindings", "development-tools"]
exclude = ["archive/", ".github/", "assets/"]

[lib]
name = "glyph"
path = "src/lib.rs"

[[bin]]
name = "glyph"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
futures-util = "0.3"

# WebSocket support
tokio-tungstenite = { version = "0.24", features = ["native-tls"], optional = true }

# HTTP support
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
url = "2.5"
http = "1.0"

# Server framework
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
hyper = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }

# FFI support for Rune integration
libc = "0.2"
anyhow = "1.0"

# Schema validation
jsonschema = "0.18"

# Observability
chrono = { version = "0.4", features = ["serde"] }

# CLI parsing
clap = { version = "4.0", features = ["derive"] }

[features]
default = ["client", "server", "websocket", "http"]
client = []
server = []
websocket = ["tokio-tungstenite"]
http = ["reqwest"]
http2 = []
ffi = []

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[[example]]
name = "client_example"
path = "examples/client_example.rs"

[[example]]
name = "server_example"
path = "examples/server_example.rs"

[[example]]
name = "test_client"
path = "examples/test_client.rs"
