[package]
name = "glyph-ghostflow"
version = "0.1.0"
edition = "2021"
description = "GhostFlow integration for Glyph MCP - expose tools as workflow nodes"

[dependencies]
glyph = { path = "../.." }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
anyhow = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
