[package]
name = "glyph-ghostllm"
version = "0.1.0"
edition = "2021"
description = "GhostLLM provider integration for Glyph MCP"

[dependencies]
glyph = { path = "../.." }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1"
