[package]
name = "glyph-jarvis"
version = "0.1.0"
edition = "2021"
description = "Jarvis CLI integration for Glyph MCP with consent prompts and tool scopes"

[[bin]]
name = "jarvis-mcp"
path = "src/main.rs"

[dependencies]
glyph = { path = "../.." }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dialoguer = "0.11"
colored = "2"
toml = "0.8"
dirs = "5"

[dev-dependencies]
tokio-test = "0.4"
